projects animation small fixes

--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -72,7 +72,7 @@ main {
 
             .img1-wrapper {
                 transform: scale(1);
-                transition: transform 0.125s ease-in-out; // Übergangsdauer hier einstellen
+                transition: transform 0.3s ease-in-out; // Übergangsdauer hier einstellen
             }
 
             .img1 {
@@ -160,10 +160,6 @@ main {
                 transform: translateY(0);
             }
         }
-
-
-
-
 
         .join-description {
             position: absolute;
